# dedent-macro-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: lib.rs
