[package]
name = "dedent-macro"
description = "Procedural macro for dedenting string literals."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jharrilim/dedent-macro-rs"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

keywords = ["dedent", "strings"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
litrs = "0.4.1"
